almost shifting correctly

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -27,6 +27,8 @@
 
 .gameTile {
 	position: absolute;
+	transition: top 0.2s, left 0.2s;
+
 	border-radius: 1rem;
 	height: 6rem;
 	width: 6rem;
